--- a/exam/img.exam/exam.css
+++ b/exam/img.exam/exam.css
@@ -1,29 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.navbar{
-    width: 35%;
-    height: 70vh;
-    padding:30px;
-
-}
-
-h1{
-    text-align: center;
-    width: 20vh;
-    height: 20vh;
-    margin-top: 10%;
-}
-p{
-    text-align: center;
-   
-}
-
-.img{
-  cursor: pointer;
-  margin-left: 60%;
-  margin-bottom: 30%;
-  
+@media only screen and (max-width: 1024px){
+    .footer-img{
+        display: none;
+    }
 }
